<resources>

    <string name="app_name">Foodie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--string for settings-->
    <string name="action_settings">Settings</string>

    <string name="cuisines_available">Cuisines Available</string>
    <string name="your_location">Your location</string>
    <string name="your_details">Your details</string>


    <string name="item_title">Chicken Noodle</string>
    <string name="item_type">Polish</string>
    <string name="title_activity_my_order">MyOrderActivity</string>
    <string name="timer_counter">00:00:00</string>

    <string name="no_food_item_selected">No Food Item Selected</string>
    <string name="no_food_msg">No Food</string>
    <string name="restaurant">Restaurants</string>

    <!--here we declare strings to hold variables for the order-->
    <string name="trackres">Restaurant name:</string>
    <string name="nameof_res">The name of the restaurant</string>
    <string name="deliverytime">Delivery time</string>
    <string name="resdeliverytime">Hours or mins</string>
    <string name="foodordered">Food ordered:</string>
    <string name="foodcost">Cost:</string>
    <string name="itemordered">Number of Orders</string>
    <string name="ordertotal">Total of this order</string>
    <string name="totalcost">Grand total</string>
    <string name="deliveryamount">Cost of Delivery</string>
    <string name="ordereddate">Date ordered</string>


    <string name="track_order">Track my Orders</string>
    <string name="my_order">My orders</string>


    <string name="regional_cuisines">Regional Cuisines</string>
    <!--Regional cuisines types-->
    <string name="chinese">Chinese Dishes</string>
    <string name="american">American Dishes</string>
    <string name="asian">Asian Dishes</string>
    <string name="ethiopian">Ethiopian Dishes</string>
    <string name="italian">Italian Dishes</string>

    <string name="Other_types">Other Cuisines</string>
    <string name="salads">Salads</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="burger">Burger</string>
    <string name="bakery">Bakery and cakes</string>
    <string name="breakfast">Breakfast</string>
    <string name="sea_foods">Sea foods</string>

    <string name="title_activity_other_services">Other Services</string>
    <string name="title_activity_detailed_food">Detailed Food</string>
    <string name="title_activity_hotel_description">Hotel Description</string>
    <string name="hotel_name">Name of hotel</string>
    <string name="title_activity_list_hotels">Foodie</string>
    <string name="making_your_meals_memorable">Making your meals memorable</string>
    <string name="powered_by_syncsoft_limited">Powered by Syncsoft Limited</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_order">add order</string>


    <!-- sharing text to other apps-->
    <string name="send_to">Share via</string>
    <string name="title_activity_fav">FavActivity</string>
    <string name="my_favorite_meals">My favorite meals</string>
    <string name="delete_your_favorites">Delete your favorites</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="meal_name">Meal name</string>
    <string name="cost">Cost</string>
    <string name="total">Total</string>
    <string name="ksh">Ksh.</string>
    <string name="_00">00</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add to cart</string>

</resources>
