<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".UI.Activities.SplashScreen">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:id="@+id/foodie_logo"
    android:textSize="90sp"
    android:textColor="@color/white"
    android:layout_centerInParent="true"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foodie_logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/our_mantra"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/making_your_meals_memorable"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="#f7d201"
        android:text="@string/powered_by_syncsoft_limited"/>

</RelativeLayout>
