<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UI.Activities.DetailedFood">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
       <include layout="@layout/foodietoolbar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#99c3bdbd"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".UI.Activities.DetailedFood"
        tools:showIn="@layout/activity_detailed_food">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:cardMaxElevation="10dp"
            android:id="@+id/card_image">
            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/foodieimage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/american" />
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Food name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:id="@+id/name_of_food"
                android:gravity="center_horizontal"
                android:layout_below="@id/card_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="90dp"
                android:gravity="end"
                android:layout_marginTop="12dp"
                android:text="Ksh. "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/price"
                android:gravity="end"
                android:layout_marginTop="12dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/describe_food"
            android:textSize="12sp"
            android:textColor="#000"
            android:maxLines="100"
            android:lines="6"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/ksh"
                    android:id="@+id/label_money"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="00"
                    android:id="@+id/total_cost"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp">
                    <ImageButton
                        android:id="@+id/btn_add"
                        android:layout_width="30dp"
                        android:clickable="true"
                        android:onClick="onClickAdd"
                        android:layout_marginLeft="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_action_add"
                        android:layout_marginTop="10dp"
                        android:padding="2dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginBottom="10dp" />
                    <TextView
                        android:id="@+id/tv_no_of_meal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="@android:color/black"/>

                    <ImageButton
                        android:id="@+id/btn_deduct"
                        android:layout_width="30dp"
                        android:clickable="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="40dp"
                        android:layout_marginEnd="40dp"
                        android:padding="2dp"
                        android:onClick="onClickDeduct"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_action_minus"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/addtocart"
            android:onClick="addToCart"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
